IE menu bar fixes
Menu bar was not visible; upon making it visible, it did not work due to a duplicate element ID.  Checkboxes in the sidebar also overlapped the dropdown menus.

--- a/style/gismo.css
+++ b/style/gismo.css
@@ -33,7 +33,8 @@ img {
     float: left;
 } 
 #header {
-    position: fixed;
+    position: absolute;
+    top: 0; left: 0;
     height: 25px;
     padding:0;
     border-bottom: 1px solid #999;
@@ -353,9 +354,9 @@ img {
 
 /* ---------------------- guide --------------------------- */
 a.guide{
-    background-color: #EEEEEE; 
-    color:#CC9999;
-    font-size: +3;
+	background-color: #EEEEEE; 
+	color:#CC9999;
+	font-size: +3;
 }
 
 /* ADDED 10.10.2013 */
